tests/pass/mytest29.rx
/*
Test: Unit Test 29 - Multidimensional array
*/
fn main() {
    let arr: [[i32; 2]; 2] = [[1, 2], [3, 4]];
    let result: i32 = arr[1][0];
    exit(result);
}
