tests/fail/mytest17.rx
/*
Test: Unit Test 17 - Empty array
*/
fn main() {
    let arr: [i32; 0] = [];
    exit(0);
}
